--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <div class="wrapper">
         <div class="head">
             <h2>Quiz Pop</h2>
-            <h2 class="create">Create User </h2>    
+            <h2 class="create">Create User </h2>
             <h3 class="user"></h3>
-
         </div>
         <div class="slide1">
             <div class="knowledge">
@@ -34,6 +33,29 @@
             <div class="bulb"><img src="images/cartoon-glowing-yellow-light-bulb-vector-18016094-removebg-preview.png"
                     alt="">
             </div>
+        </div>
+    </div>
+    <div class="slide2">
+        <div class="quiz">
+            <h1>Quiz pop</h1>
+            <ul>
+                <li><a href="">home</a></li>
+                <li><a href="">quiz</a></li>
+                <li><a href="">score</a></li>
+            </ul>
+            <h3 class="user1"></h3>
+        </div>
+        <div class="welcome">
+            <h1>welcome to quiz app</h1>
+            <h2>select topic</h2>
+        </div>
+        <div class="music">
+            <ul>
+                <li><a class="one"  href="">music</a></li>
+                <li><a class="modern" href="">modern art</a></li>
+                <li><a class="coding" href="">coding</a></li>
+            </ul>
+            <button> start</button>
         </div>
     </div>
     <script src="quiz.js"></script>
