--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
             <h2>select topic</h2>
         </div>
         <div class="music">
-            <ul>
-                <li><a class="one"  href="">music</a></li>
-                <li><a class="modern" href="">modern art</a></li>
-                <li><a class="coding" href="">coding</a></li>
-            </ul>
-            <button> start</button>
+            <label>Select an option:</label>
+            <input type="radio" name="option" value="Music" checked> Option 1
+            <input type="radio" name="option" value="Modern Art"> Option 2
+            <input type="radio" name="option" value="Coding"> Option 3
+            <button id="start-btn">Start</button>
         </div>
+
+
     </div>
     <script src="quiz.js"></script>
 </body>
