--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="quiz">
             <h1>Quiz pop</h1>
             <ul>
-                <li class="home"><a href="">home</a></li>
-                <li class="quizz"><a href="">quiz</a></li>
-                <li class="loadscore"><a href="">score</a></li>
+                <li class="home"><a href="">Home</a></li>
+                <li><h3>Quiz</h3></li>
+                <li class="loadscore"><a href="">Score</a></li>
             </ul>
             <h3 class="user1"></h3>
         </div>
