--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="codingqs">
         <div class="timeline">
-            <h1>Coding quiz</h1><span><i class="fa-solid fa-clock"></i></span>
+            <h1>Quiz</h1><span>15</span>
         </div> 
         <div class="qarea">
             <div id="quest">
