--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                 <h1 class="question"></h1>
                 <ul>
                     <li><input type="radio" name="answer" id="ans1" class="answer">
-                        <label for="ans1" id="option1">answer option</label>
+                        <label for="ans1" id="option1"></label>
                     </li>
                     <li><input type="radio" name="answer" id="ans2" class="answer">
-                        <label for="ans2" id="option2">answer option</label>
+                        <label for="ans2" id="option2"></label>
                     </li>
                     <li><input type="radio" name="answer" id="ans3" class="answer">
-                        <label for="ans3" id="option3">answer option</label>
+                        <label for="ans3" id="option3"></label>
                     </li>
                     <li><input type="radio" name="answer" id="ans4" class="answer">
-                        <label for="ans4" id="option4">answer option</label>
+                        <label for="ans4" id="option4"></label>
                     </li>
 
                 </ul>
