--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <h2>select topic</h2>
         </div>
         <div class="music">
-            <input type="radio" name="option" value="Music">
+            <input id="music" type="radio" name="option" value="Music">
             <label for="music">Music</label><br>
-            <input type="radio" name="option" value="Modern Art">
+            <input id="modern Art" type="radio" name="option" value="Modern Art">
             <label for="modern Art">Modern Art</label><br>
-            <input type="radio" name="option" value="Coding">
+            <input id="coding" type="radio" name="option" value="Coding">
             <label for="coding">Coding</label><br>
             <button id="start-btn">Start</button>
         </div>
